Hardcoded category choices

--- a/public/index.html
+++ b/public/index.html
@@ -63,11 +63,10 @@
             <div class="col-2">
                 <ul class="list-group">
                     <h4>Category</h4>
-                    <li class="list-group-item">Cras justo odio</li>
-                    <li class="list-group-item">Dapibus ac facilisis in</li>
-                    <li class="list-group-item">Morbi leo risus</li>
-                    <li class="list-group-item">Porta ac consectetur ac</li>
-                    <li class="list-group-item">Vestibulum at eros</li>
+                    <li class="list-group-item">Road</li>
+                    <li class="list-group-item">Mountain</li>
+                    <li class="list-group-item">Electric</li>
+                    <li class="list-group-item">Junior</li>
                 </ul>
 
                 <ul class="list-group">
